# ollama-router

./: .chore-trigger  .commitlintrc.json  .dockerignore  .env.example  .eslintignore  .markdownlint-cli2.jsonc  .markdownlint.json  .markdownlintignore  .prettierignore  .releaserc.json  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  INSTALL.md  Makefile  README.ja.md  README.md  TROUBLESHOOTING.md  USAGE.md  clippy.toml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  rustfmt.toml
agent/: Cargo.toml
agent/src/: client.rs  config.rs  lib.rs  main.rs  metrics.rs  model_sync.rs  ollama.rs  ollama_pool.rs  settings.rs
agent/src/api/: logs.rs  mod.rs  models.rs  openai.rs
agent/src/gui/: mod.rs  tray.rs
agent/tests/integration/: mod.rs  test_agent_registration.rs  test_download_with_progress.rs  test_heartbeat.rs
agent/tests/unit/: test_registration_guard.rs
common/: Cargo.toml
common/src/: auth.rs  config.rs  error.rs  lib.rs  log.rs  protocol.rs  types.rs
coordinator/: Cargo.toml  build.rs
coordinator/benches/: loadbalancer_bench.rs
coordinator/migrations/: 001_auth_init.sql
coordinator/src/: lib.rs  logging.rs  main.rs
coordinator/src/api/: agent.rs  api_keys.rs  auth.rs  dashboard.rs  health.rs  logs.rs  mod.rs  models.rs  openai.rs  proxy.rs  users.rs
coordinator/src/auth/: bootstrap.rs  jwt.rs  middleware.rs  mod.rs  password.rs
coordinator/src/balancer/: mod.rs
coordinator/src/db/: agent_tokens.rs  api_keys.rs  migrations.rs  mod.rs  request_history.rs  users.rs
coordinator/src/gui/: mod.rs  tray.rs
coordinator/src/health/: mod.rs
coordinator/src/models/: gpu_selector.rs  mod.rs
coordinator/src/ollama/: client.rs  mod.rs
coordinator/src/registry/: mod.rs  models.rs
coordinator/src/tasks/: mod.rs
coordinator/src/web/static/: api-keys.js  app.js  index.html  login.html  models.js  styles.css  (+1 more)
coordinator/tests/: contract_tests.rs  dashboard_smoke.rs  e2e_auth.rs  e2e_openai_proxy.rs  integration_balancer.rs  integration_gpu.rs  integration_tests.rs  openai_proxy.rs  unit_tests.rs
coordinator/tests/contract/: api_keys_api_test.rs  auth_api_test.rs  models_api_test.rs  test_agent_register_gpu.rs  test_agent_registration.rs  test_agents_list.rs  test_health_check.rs  test_proxy_chat.rs  test_proxy_completions.rs  test_proxy_generate.rs  users_api_test.rs
coordinator/tests/e2e/: agent_flow_test.rs  api_key_flow_test.rs  auth_flow_test.rs
coordinator/tests/integration/: agent_token_test.rs  api_key_flow_test.rs  auth_disabled_test.rs  auth_flow_test.rs  auto_download_test.rs  dashboard_gpu_display.rs  loadbalancer_test.rs  manual_distribution_test.rs  middleware_test.rs  migration_test.rs  model_info_test.rs  test_agent_lifecycle.rs  test_dashboard.rs  test_health_monitor.rs  test_load_balancing.rs  test_proxy.rs
coordinator/tests/support/: coordinator.rs  http.rs  mod.rs
coordinator/tests/ui/: modals_hidden_on_load.rs  model_panel_removed.rs  model_tabs_hidden.md
coordinator/tests/unit/: gpu_model_selector_test.rs  jwt_test.rs  mod.rs  model_repository_test.rs  password_test.rs
node/: CMakeLists.txt  Cargo.toml  Dockerfile  build.rs
node/include/api/: http_server.h  node_endpoints.h  openai_endpoints.h  router_client.h
node/include/core/: inference_engine.h  llama_manager.h  model_pool.h
node/include/metrics/: prometheus_exporter.h
node/include/models/: hf_client.h  model_converter.h  model_downloader.h  model_registry.h  model_repair.h  model_storage.h  model_sync.h  ollama_compat.h
node/include/runtime/: state.h
node/include/system/: gpu_detector.h
node/include/utils/: cli.h  config.h  file_lock.h  json_utils.h  logger.h  request_id.h  sha256.h  system_info.h  version.h
node/src/: client.rs  lib.rs  logging.rs  main.cpp  main.rs  metrics.rs  model_sync.rs  ollama.rs  ollama_pool.rs  registration.rs  settings.rs
node/src/api/: http_server.cpp  logs.rs  mod.rs  models.rs  node_endpoints.cpp  openai.rs  openai_endpoints.cpp  router_client.cpp
node/src/core/: inference_engine.cpp  llama_manager.cpp  model_pool.cpp
node/src/gui/: tray.rs
node/src/metrics/: prometheus_exporter.cpp
node/src/models/: hf_client.cpp  model_converter.cpp  model_downloader.cpp  model_registry.cpp  model_repair.cpp  model_storage.cpp  model_sync.cpp  ollama_compat.cpp
node/src/runtime/: state.cpp
node/src/system/: gpu_detector.cpp  gpu_detector.mm
node/src/utils/: cli.cpp  config.cpp  json_utils.cpp  logger.cpp  request_id.cpp  system_info.cpp
node/tests/: CMakeLists.txt  integration_tests.rs  unit_tests.rs
node/tests/contract/: CMakeLists.txt  openai_api_test.cpp  router_api_test.cpp
node/tests/integration/: CMakeLists.txt  auto_repair_test.cpp  http_server_test.cpp  main_test.cpp  mod.rs  model_lifecycle_test.cpp  model_sync_download_test.cpp  node_endpoints_test.cpp  node_prometheus_test.cpp  openai_endpoints_test.cpp  test_agent_registration.rs  test_download_checksum.rs  test_download_proxy.rs  test_download_retry.rs  test_heartbeat.rs  test_model_download.rs  test_ollama_lifecycle.rs
node/tests/unit/: CMakeLists.txt  cli_test.cpp  gpu_detector_test.cpp  hf_client_test.cpp  inference_engine_test.cpp  llama_manager_test.cpp  mod.rs  model_converter_test.cpp  model_downloader_test.cpp  model_loader_test.cpp  model_pool_test.cpp  model_repair_test.cpp  model_storage_test.cpp  model_sync_test.cpp  ollama_compat_test.cpp  router_client_test.cpp  test_backoff.rs  test_checksum.rs  test_proxy_url.rs  test_registration_guard.rs  utils_config_test.cpp  utils_misc_test.cpp
ollama-node-cpp/: CMakeLists.txt  Dockerfile
ollama-node-cpp/include/api/: router_client.h
ollama-node-cpp/include/runtime/: state.h
ollama-node-cpp/src/: main.cpp
ollama-node-cpp/src/api/: node_endpoints.cpp  router_client.cpp
ollama-node-cpp/src/system/: gpu_detector.cpp  gpu_detector.mm
ollama-node-cpp/tests/contract/: CMakeLists.txt
ollama-node-cpp/tests/integration/: CMakeLists.txt  node_endpoints_test.cpp
ollama-node-cpp/tests/unit/: CMakeLists.txt  router_client_test.cpp
(+280 files in other folders)
