[workspace]
members = ["common", "coordinator", "agent"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ollama Coordinator Contributors"]
license = "Apache-2.0"
repository = "https://github.com/akiojin/ollama-coordinator"

[workspace.dependencies]
# 共通依存クレート
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11", features = ["json"] }

# Coordinator専用
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }

# Agent専用
tauri = { version = "1.5", features = ["system-tray", "window-all"] }
sysinfo = "0.30"
tray-icon = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
