[workspace]
members = ["common", "router", "node"]
resolver = "2"

[workspace.package]
version = "2.0.0"
edition = "2021"
authors = ["Ollama Router Contributors"]
license = "Apache-2.0"
repository = "https://github.com/akiojin/ollama-router"

[workspace.dependencies]
# 共通依存クレート
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
reqwest = { version = "0.11", features = ["json", "stream"] }

# Router専用
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# Node専用
sysinfo = "0.30"

[patch.crates-io]
pest_generator = { path = "vendor/pest_generator" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
