[package]
name = "ollama-coordinator-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ollama-coordinator-common = { path = "../common" }

# 非同期ランタイム
tokio = { workspace = true }

# GUI
tauri = { workspace = true }
tray-icon = { workspace = true }

# HTTPクライアント
reqwest = { workspace = true }

# システム監視
sysinfo = { workspace = true }

# シリアライゼーション
serde = { workspace = true }
serde_json = { workspace = true }

# ログ
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# その他
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
