[package]
name = "ollama-coordinator-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ollama-coordinator-common = { path = "../common" }

# 非同期ランタイム
tokio = { workspace = true }

# HTTPクライアント
reqwest = { workspace = true }

# システム監視
sysinfo = { workspace = true }
flate2 = "1.0"
tar = "0.4"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
nvml-wrapper = "0.9"

# シリアライゼーション
serde = { workspace = true }
serde_json = { workspace = true }

# ログ
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# その他
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
whoami = "1.4"

# GPU検出 (プラットフォーム別)
[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.29"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
wiremock = "0.6.5"
once_cell = "1.21"
