[package]
name = "llm-router-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
config = "0.13"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
