[package]
name = "ollama-coordinator-coordinator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ollama-coordinator-common = { path = "../common" }

# 非同期ランタイム
tokio = { workspace = true }

# Webフレームワーク
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# シリアライゼーション
serde = { workspace = true }
serde_json = { workspace = true }

# HTTPクライアント
reqwest = { workspace = true }
futures = "0.3"

# ログ
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# その他
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
sysinfo = "0.32"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3.8"
once_cell = "1.21"
wiremock = "0.6.5"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "loadbalancer_bench"
harness = false
