[package]
name = "ollama-coordinator-coordinator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[dependencies]
ollama-coordinator-common = { path = "../common" }

# 非同期ランタイム
tokio = { workspace = true }

# Webフレームワーク
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
include_dir = "0.7"
mime_guess = "2.0"

# シリアライゼーション
serde = { workspace = true }
serde_json = { workspace = true }

# HTTPクライアント
reqwest = { workspace = true }
futures = "0.3"

# ログ
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# その他
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
sysinfo = "0.32"
csv = "1.3"

[build-dependencies]
winresource = "0.1.27"

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
tray-icon = "0.21.2"
winit = "0.30"
image = { version = "0.25", default-features = false, features = ["png"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3.8"
once_cell = "1.21"
wiremock = "0.6.5"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "loadbalancer_bench"
harness = false
